create Redis cache
